# legal-doc-ai-demo

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  deploy.sql  ruff.toml  teardown.sql
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: annual-savings.md  architecture-baseline.mmd  architecture-diagram.mmd  architecture-optimized.mmd  code-review-checklist.md  customer-narrative.md  customer-pushback-prep.md  demo-runbook.md  lever-cost-comparison.md  migration-plan.md  risk-register.md
eval/: 09_cross_judge.sql  09_grounded_qa_pairs.sql  10_drift_monitor.sql  30_eval_setup.sql  31_lever1_cache_identity.sql  32_lever2_routing_agreement.sql  33_lever3_model_matrix.sql  34_lever4_structured_fielddiff.sql  35_lever5_retrieval_quality.sql  40_pareto_frontier.sql  50_eval_summary.sql  README.md
scripts/: benchmark.py  fetch_corpus.py  generate_grounded_qa.py  pdf_preprocess.py  pypdf_fallback.py  pyproject.toml  snapshot_demo_state.sh  upload_pdfs.py
slides/: legal-doc-ai-cost-optimization.md
sql/: 00_prereqs.sql  01_setup.sql  02_stage.sql  03_pdf_corpus.sql  10_baseline.sql  11_cache_layer.sql  12_smart_routing.sql  13_cheap_scorer.sql  14_structured_outputs.sql  15_embed_search.sql  16_agent.sql  17_token_preflight.sql  18_completion_cache.sql  19_batch_demo.sql  19b_pypdf_path.sql  20_cost_telemetry.sql  30_resource_monitor.sql  (+3 more)
streamlit/: DEPLOY.md  app.py  pyproject.toml  snowflake.yml
tests/: pyproject.toml  pytest.ini  test_cache_identity.py  test_routing_oracle.py  test_structured_schema.py
(+5 files in other folders)
