[project]
name = "legal-doc-ai-eval-tests"
version = "0.1.0"
description = "Quality eval tests for Legal Doc AI PDF cost optimization"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pypdf2>=3.0",
    "snowflake-connector-python>=3.6",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Snowflake connection",
    "unit: local-only tests",
]
